--- a/CS303-Assignment-3.vcxproj.filters
+++ b/CS303-Assignment-3.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="CS303-Assignment-3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="A3Functions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="A3Functions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
